--- a/dox/example_PersonRepository.dox
+++ b/dox/example_PersonRepository.dox
@@ -170,9 +170,9 @@
  *
  *   virtual Mdt::Expected<PersonId> add(const Person & person) = 0;
  *   virtual Mdt::Expected<Person> get(PersonId id) const  = 0;
- *   virtual bool update(const Person & person)  = 0;
- *   virtual bool remove(PersonId id)  = 0;
- *   virtual bool removeAll()  = 0;
+ *   virtual Mdt::ExpectedResult update(const Person & person)  = 0;
+ *   virtual Mdt::ExpectedResult remove(PersonId id)  = 0;
+ *   virtual Mdt::ExpectedResult removeAll()  = 0;
  * };
  * \endcode
  *
@@ -195,9 +195,9 @@
  *   SqlPersonRepository(const QSqlDatabase & db);
  *   Mdt::Expected<PersonId> add(const Person & person) override;
  *   Mdt::Expected<Person> get(PersonId id) const override;
- *   bool update(const Person & person) override;
- *   bool remove(PersonId id) override;
- *   bool removeAll() override;
+ *   Mdt::ExpectedResult update(const Person & person) override;
+ *   Mdt::ExpectedResult remove(PersonId id) override;
+ *   Mdt::ExpectedResult removeAll() override;
  *
  *  private:
  *
@@ -235,37 +235,31 @@
  *   return personFromDataStruct(*personData);
  * }
  *
- * bool SqlPersonRepository::update(const Person & person)
+ * Mdt::ExpectedResult SqlPersonRepository::update(const Person & person)
  * {
- *   bool ok = mTable.update( personPrivateConstDataStruct(person) );
- *   if(!ok){
+ *   const auto result = mTable.update( personPrivateConstDataStruct(person) );
+ *   if(!result){
  *     // Maybe generate a more domain specific error message here
- *     setLastError(mTable.lastError());
- *     return false;
  *   }
- *   return true;
+ *   return result;
  * }
  *
- * bool SqlPersonRepository::remove(PersonId id)
+ * Mdt::ExpectedResult SqlPersonRepository::remove(PersonId id)
  * {
- *   bool ok = mTable.remove( id.value() );
- *   if(!ok){
+ *   const auto result = mTable.remove( id.value() );
+ *   if(!result){
  *     // Maybe generate a more domain specific error message here
- *     setLastError(mTable.lastError());
- *     return false;
  *   }
- *   return true;
+ *   return result;
  * }
  *
- * bool SqlPersonRepository::removeAll()
+ * Mdt::ExpectedResult SqlPersonRepository::removeAll()
  * {
- *   bool ok = mTable.removeAll();
- *   if(!ok){
+ *   const auto result = mTable.removeAll();
+ *   if(!result){
  *     // Maybe generate a more domain specific error message here
- *     setLastError(mTable.lastError());
- *     return false;
  *   }
- *   return true;
+ *   return result;
  * }
  * \endcode
  *
